feat: update backend with unit test corrections and integration tests